<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>500</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Đăng ký tài khoản</string>
  </property>
  <property name="styleSheet">
   <string notr="true">/* Global Styles */
QWidget {
	font-family: Segoe UI;
	font-size: 15px;
}

QMainWindow {
	background-color: white;
}

/* Styles for specific widget types */
QLabel {
	color: #333;
}

QLineEdit {
	border: 1px solid #ccc;
	border-radius: 8px;
	padding: 8px;
	background-color: #f9f9f9;
}

QLineEdit:focus {
	border: 1px solid #00aaff;
}
</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,1">
    <item>
     <!-- Left Panel for the Image -->
     <widget class="QLabel" name="imageLabel">
      <property name="text">
       <string/>
      </property>
      <property name="pixmap">
                <pixmap/>
      </property>
      <property name="scaledContents">
       <bool>true</bool>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
    <item>
     <!-- Right Panel for the Registration Form -->
     <widget class="QWidget" name="formContainer" native="true">
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
        <spacer name="verticalSpacer_top">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
           <height>40</height>
          </size>
         </property>
        </spacer>
       </item>
       <item>
        <widget class="QLabel" name="titleLabel">
         <property name="text">
          <string>ĐĂNG KÝ TÀI KHOẢN</string>
         </property>
         <property name="styleSheet">
          <string notr="true">font-size: 28px; font-weight: bold; color: #118ab2;</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
         </property>
        </widget>
       </item>
       <item>
        <!-- Form Layout for labels and inputs -->
        <layout class="QFormLayout" name="formLayout">
         <property name="topMargin">
          <number>20</number>
         </property>
         <property name="verticalSpacing">
          <number>15</number>
         </property>
         <item row="0" column="0">
          <widget class="QLabel" name="fullNameLabel">
           <property name="text">
            <string>Họ và tên:</string>
           </property>
          </widget>
         </item>
         <item row="0" column="1">
          <widget class="QLineEdit" name="fullNameLineEdit">
           <property name="placeholderText">
            <string>Nhập họ và tên của bạn</string>
           </property>
          </widget>
         </item>
         <item row="1" column="0">
          <widget class="QLabel" name="passwordLabel">
           <property name="text">
            <string>Mật khẩu:</string>
           </property>
          </widget>
         </item>
         <item row="1" column="1">
          <widget class="QLineEdit" name="passwordLineEdit">
           <property name="echoMode">
            <enum>QLineEdit::Password</enum>
           </property>
           <property name="placeholderText">
            <string>Nhập mật khẩu</string>
           </property>
          </widget>
         </item>
         <item row="2" column="0">
          <widget class="QLabel" name="confirmPasswordLabel">
           <property name="text">
            <string>Nhập lại mật khẩu:</string>
           </property>
          </widget>
         </item>
         <item row="2" column="1">
          <widget class="QLineEdit" name="confirmPasswordLineEdit">
           <property name="echoMode">
            <enum>QLineEdit::Password</enum>
           </property>
           <property name="placeholderText">
            <string>Xác nhận lại mật khẩu</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item>
        <widget class="QPushButton" name="registerButton">
         <property name="minimumSize">
          <size>
           <width>0</width>
           <height>45</height>
          </size>
         </property>
         <property name="styleSheet">
          <string notr="true">QPushButton {
	background-color: #00cc66; /* Green */
	color: white;
	border-radius: 8px;
	font-weight: bold;
	font-size: 16px;
}

QPushButton:hover {
	background-color: #00b359;
}

QPushButton:pressed {
	background-color: #00994d;
}</string>
         </property>
         <property name="text">
          <string>ĐĂNG KÝ</string>
         </property>
        </widget>
       </item>
       <item>
        <spacer name="verticalSpacer_bottom">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
           <height>40</height>
          </size>
         </property>
        </spacer>
       </item>
      </layout>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>800</width>
     <height>25</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources>
  <include location="resources.qrc"/>
 </resources>
 <connections/>
</ui>